Aggiunto validazioni per ogni campo dati
Validazione aggiunte per le pagine:
create/update competition
create/update match
create/update event

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -2,4 +2,17 @@ Size.credentials.username=La lunghezza dello username deve essere compresa fra i
 Size.credentials.password=La lunghezza dello password deve essere lunga minimo 8 caratteri.
 duplicate.credentials.username=Questo username non è disponibile.
 Size.user.name=La lunghezza del nome deve essere compresa fra i 3 e 30 caratteri.
-Size.user.surname=La lunghezza del cognome deve essere compresa fra i 3 e 30 caratteri
+Size.user.surname=La lunghezza del cognome deve essere compresa fra i 3 e 30 caratteri.
+Size.event.name=La lunghezza del nome deve essere compresa fra i 3 e 40 caratteri.
+Future.event.dateTime=Data e ora devono essere future.
+NotNull.event.dateTime=Specificare data e ora.
+Size.competition.name=La lunghezza del nome deve essere compresa fra i 3 e 40 caratteri.
+Future.competition.endDateTime=Data e ora devono essere future.
+NotNull.competition.endDateTime=Specificare data e ora.
+Future.competition.startDateTime=Data e ora devono essere future.
+NotNull.competition.startDateTime=Specificare data e ora.
+consistentDate.competition.endDateTime=La data di fine deve essere dopo quella di inizio.
+Size.match.opponent=La lunghezza del nome deve essere compresa fra i 3 e 40 caratteri.
+Future.match.dateTime=La data e ora devono essere future.
+NotNull.match.dateTime=Specificare data e ora.
+NotNull.match.result=Il match deve avere un risultato.
