Rinominata la classe Match a PlayedMatch

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -12,7 +12,7 @@ NotNull.competition.endDateTime=Specificare data e ora.
 Future.competition.startDateTime=Data e ora devono essere future.
 NotNull.competition.startDateTime=Specificare data e ora.
 consistentDate.competition.endDateTime=La data di fine deve essere dopo quella di inizio.
-Size.match.opponent=La lunghezza del nome deve essere compresa fra i 3 e 40 caratteri.
-Future.match.dateTime=La data e ora devono essere future.
-NotNull.match.dateTime=Specificare data e ora.
-NotNull.match.result=Il match deve avere un risultato.
+Size.playedmatch.opponent=La lunghezza del nome deve essere compresa fra i 3 e 40 caratteri.
+Future.playedMatch.dateTime=La data e ora devono essere future.
+NotNull.playedMatch.dateTime=Specificare data e ora.
+NotNull.playedMatch.result=Il match deve avere un risultato.
