Aggiunto altri messaggi nella pagina del login

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -1,3 +1,7 @@
+#==================================
+# = Validation
+#==================================
+
 Size.credentials.username=La lunghezza dello username deve essere compresa fra i 3 e 20 caratteri.
 Size.credentials.password=La lunghezza dello password deve essere lunga minimo 8 caratteri.
 duplicate.credentials.username=Questo username non è disponibile.
@@ -16,3 +20,10 @@ Size.playedmatch.opponent=La lunghezza del nome deve essere compresa fra i 3 e 4
 Future.playedMatch.dateTime=La data e ora devono essere future.
 NotNull.playedMatch.dateTime=Specificare data e ora.
 NotNull.playedMatch.result=Il match deve avere un risultato.
+
+#==================================
+# = Authentication
+#==================================
+
+AbstractUserDetailsAuthenticationProvider.badCredentials=Credenziali errate
+AbstractUserDetailsAuthenticationProvider.disabled=Utente non abilitato. Per accedere, attendere che un amministratore abiliti l'utenza.
