Cambiato alcune validazioni e i messaggi di validazione

--- a/src/main/resources/messages/messages.properties
+++ b/src/main/resources/messages/messages.properties
@@ -2,24 +2,26 @@
 # = Validation
 #==================================
 
-Size.credentials.username=La lunghezza dello username deve essere compresa fra i 3 e 20 caratteri.
-Size.credentials.password=La lunghezza dello password deve essere lunga minimo 8 caratteri.
+Size.credentials.username=Lo username deve contenere da 3 a 20 caratteri.
 duplicate.credentials.username=Questo username non è disponibile.
-Size.user.name=La lunghezza del nome deve essere compresa fra i 3 e 30 caratteri.
-Size.user.surname=La lunghezza del cognome deve essere compresa fra i 3 e 30 caratteri.
-Size.event.name=La lunghezza del nome deve essere compresa fra i 3 e 40 caratteri.
-Future.event.dateTime=Data e ora devono essere future.
-NotNull.event.dateTime=Specificare data e ora.
-Size.competition.name=La lunghezza del nome deve essere compresa fra i 3 e 40 caratteri.
-Future.competition.endDateTime=Data e ora devono essere future.
-NotNull.competition.endDateTime=Specificare data e ora.
-Future.competition.startDateTime=Data e ora devono essere future.
-NotNull.competition.startDateTime=Specificare data e ora.
-consistentDate.competition.endDateTime=La data di fine deve essere dopo quella di inizio.
-Size.playedmatch.opponent=La lunghezza del nome deve essere compresa fra i 3 e 40 caratteri.
-Future.playedMatch.dateTime=La data e ora devono essere future.
-NotNull.playedMatch.dateTime=Specificare data e ora.
-NotNull.playedMatch.result=Il match deve avere un risultato.
+Size.credentials.password=La password deve contenere almeno 8 caratteri.
+
+Size.user.name=Il nome deve contenere da 3 a 30 caratteri.
+Size.user.surname=Il cognome deve contenere da 3 a 30 caratteri.
+
+Size.event.name=Il nome deve contenere da 3 a 40 caratteri.
+Future.event.dateTime=Data ed ora di inizio devono essere future.
+NotNull.event.dateTime=Specificare data ed ora.
+
+Size.competition.name=Il nome deve contenere da 3 a 40 caratteri.
+NotNull.competition.startDateTime=Specificare data ed ora.
+NotNull.competition.endDateTime=Specificare data ed ora.
+consistentDate.competition.endDateTime=Data ed ora di fine devono essere dopo quelle di inizio.
+
+Size.playedMatch.opponent=Il nome dell'avversario deve contenere da 3 a 40 caratteri.
+Future.playedMatch.dateTime=Data ed ora di inizio devono essere future.
+NotNull.playedMatch.dateTime=Specificare data ed ora.
+NotNull.playedMatch.result=La partita giocata deve avere un risultato.
 
 #==================================
 # = Authentication
